adding key aspects / analysis to cpt/ppr

--- a/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
@@ -105,6 +105,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Key Aspects  \n",
+    "\n",
+    "### 1. Input Handling  \n",
+    "- **Function:** `add_user()`  \n",
+    "- **Process:**  \n",
+    "  - Receives JSON data from a POST request.  \n",
+    "  - Extracts `author`, `quote`, and `date` from user input.  \n",
+    "  - Checks for missing data and returns an error if any field is empty.  \n",
+    "  - Saves the new quote to the database and returns a confirmation message.  \n",
+    "\n",
+    "### 2. Data Abstraction  \n",
+    "- **Function:** `get_quotes()`  \n",
+    "- **Process:**  \n",
+    "  - Retrieves all quotes from the database.  \n",
+    "  - Stores the quotes in a list of dictionaries, each containing `id`, `author`, `quote`, and `date`.  \n",
+    "  - Returns the structured data as a JSON response.  \n",
+    "\n",
+    "### 3. Output Handling  \n",
+    "- **Functions:**  \n",
+    "  - `add_user()`: Returns a success message when a quote is added.  \n",
+    "  - `delete_quote(id)`: Returns a confirmation message when a quote is deleted.  \n",
+    "  - `update_quote(id)`: Returns a success message after modifying a quote.  \n",
+    "\n",
+    "### 4. Student-Developed Procedure  \n",
+    "- **Function:** `update_quote(id)`  \n",
+    "- **Process:**  \n",
+    "  - Receives JSON data and extracts updated values.  \n",
+    "  - Checks for missing data and validates if the quote exists.  \n",
+    "  - Updates the quote’s details and commits the changes to the database.  \n",
+    "  - Returns a confirmation message after a successful update.  \n",
+    "\n",
+    "## Complexity Management  \n",
+    "- **Encapsulation:** Separates concerns into specific functions for adding, retrieving, updating, and deleting quotes.  \n",
+    "- **Data Abstraction:** Uses lists and dictionaries to organize and retrieve data efficiently.  \n",
+    "- **Error Handling:** Validates input and ensures proper responses for missing or incorrect data.  \n",
+    "- **Procedure Implementation:** The `update_quote` function follows structured steps to modify and persist quote data.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Component B: VIDEO\n",
     "Demonstrates:\n",
     "- Input to your program\n",
@@ -230,6 +272,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Key Aspects  \n",
+    "\n",
+    "### Segment 1: Procedure Definition (with Sequencing and Selection)  \n",
+    "- **Function:** `update_quote(id, author, quote, date)`  \n",
+    "- **Purpose:** Updates an existing quote in the database.  \n",
+    "- **Selection:** Uses an `if` condition to check if the quote exists before updating.  \n",
+    "- **Sequencing:** Executes steps in order: retrieving the quote, modifying its attributes, committing changes to the database, and returning a success message.  \n",
+    "\n",
+    "### Segment 2: Calling the Procedure  \n",
+    "- **Function:** `editQuote(id, currentAuthor, currentQuote, currentDate)`  \n",
+    "- **Purpose:** Handles the frontend logic for editing a quote and sends a `PUT` request to update the quote in the backend.  \n",
+    "- **User Interaction:**  \n",
+    "  - Displays the edit form and hides the add form.  \n",
+    "  - Sets placeholders with the current quote details.  \n",
+    "  - Allows user input while keeping previous values if fields are left empty.  \n",
+    "- **Procedure Call:**  \n",
+    "  - When the form is submitted, an asynchronous `fetch` request is sent to call the `update_quote` function in the backend.  \n",
+    "  - If the request succeeds, the UI is updated and refreshed.  \n",
+    "\n",
+    "## Complexity Management  \n",
+    "- **Encapsulation:** The update logic is handled in a single procedure, reducing redundancy.  \n",
+    "- **Selection:** Ensures only existing quotes are updated, preventing errors.  \n",
+    "- **Sequencing:** Steps are executed in a structured manner for consistency.  \n",
+    "- **Frontend-Backend Communication:** The procedure is effectively called via a `PUT` request, ensuring seamless updates between the database and the user interface.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### List Usage for Managing Complexity\n",
     "**List**: Capture and paste two program code segments you developed during\n",
     "the administration of this task that contain a list (or other collection type)\n",
@@ -281,6 +353,29 @@
     "        'quote': random_quote._quote,\n",
     "        'date': random_quote._date\n",
     "    }), 200"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key Aspects  \n",
+    "\n",
+    "### Segment 3: Storing Data in a List  \n",
+    "- Retrieves all quotes from a database using `Quotes.query.all()`.  \n",
+    "- Iterates over the retrieved data to store it in a list of dictionaries, each containing details about a quote (ID, author, text, and date).  \n",
+    "- This structure simplifies data handling by allowing easy access and manipulation.  \n",
+    "\n",
+    "### Segment 4: Using Data from the List  \n",
+    "- Defines an API endpoint `/api/userquotes/random`.  \n",
+    "- Retrieves all quotes from the database and checks if the list is empty (selection).  \n",
+    "- Uses `random.choice()` to select a random quote from the list.  \n",
+    "- Returns the selected quote in JSON format, making the data easily accessible via API.  \n",
+    "\n",
+    "## Complexity Management  \n",
+    "- The list efficiently organizes multiple quotes for retrieval and processing.  \n",
+    "- Iteration and selection simplify accessing and manipulating the data.  \n",
+    "- Random selection enhances user experience by dynamically retrieving different quotes.  \n"
    ]
   }
  ],
