Add some comments to cpt/ppr

--- a/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
+++ b/_notebooks/Foundation/finaltri2/2025-03-05-CPT_PPR.ipynb
@@ -221,51 +221,43 @@
    "outputs": [],
    "source": [
     "function editQuote(id, currentAuthor, currentQuote, currentDate) {\n",
-    "    // Display the edit form and hide the add form\n",
     "    document.getElementById('quote-edit-form').style.display = 'block';\n",
     "    document.getElementById('quote-form').style.display = 'none'; // Hide the Add form\n",
     "\n",
-    "    // Set placeholder values to the current quote details\n",
     "    document.getElementById('edit-author').placeholder = currentAuthor;\n",
     "    document.getElementById('edit-quote').placeholder = currentQuote;\n",
     "    document.getElementById('edit-date').placeholder = currentDate;\n",
     "\n",
-    "    // Clear input fields to allow user entry\n",
     "    document.getElementById('edit-author').value = \"\";\n",
     "    document.getElementById('edit-quote').value = \"\";\n",
     "    document.getElementById('edit-date').value = \"\";\n",
     "\n",
-    "    // When the form is submitted, send a PUT request to update the quote\n",
     "    const form = document.getElementById('edit-quote-form');\n",
     "    form.onsubmit = async function(event) {\n",
-    "        event.preventDefault(); // Prevents default form submission behavior\n",
+    "        event.preventDefault(); \n",
     "\n",
-    "        // Get user input; if fields are empty, keep the previous values\n",
     "        const author = document.getElementById('edit-author').value || currentAuthor;\n",
     "        const quote = document.getElementById('edit-quote').value || currentQuote;\n",
     "        const date = document.getElementById('edit-date').value || currentDate;\n",
     "\n",
-    "        // Send a PUT request to update the quote in the backend\n",
-    "        const response = await fetch(`${API_URL}/${id}`, { // Calls the backend update_quote function\n",
-    "            method: 'PUT', // Specifies that this request is an update operation\n",
+    "        const response = await fetch(`${API_URL}/${id}`, { \n",
+    "            method: 'PUT',\n",
     "            headers: {\n",
-    "                'Content-Type': 'application/json', // Informs the backend that JSON data is being sent\n",
+    "                'Content-Type': 'application/json',\n",
     "            },\n",
-    "            body: JSON.stringify({ author, quote, date }), // Sends the updated quote data to the backend\n",
+    "            body: JSON.stringify({ author, quote, date }), \n",
     "        });\n",
     "\n",
     "\n",
-    "        // Handle the response\n",
     "        if (response.ok) {\n",
-    "            alert('Notes updated successfully!'); // Notify user of success\n",
-    "            fetchQuotes(); // Refresh the displayed notes\n",
-    "            cancelEdit(); // Hide the edit form and show the add form again\n",
+    "            alert('Notes updated successfully!'); \n",
+    "            fetchQuotes(); \n",
+    "            cancelEdit(); \n",
     "        } else {\n",
-    "            alert('Failed to update notes.'); // Notify user of failure\n",
+    "            alert('Failed to update notes.'); \n",
     "        }\n",
     "    };\n",
-    "}\n",
-    "="
+    "}\n"
    ]
   },
   {
@@ -279,6 +271,8 @@
     "- **Purpose:** Updates an existing quote in the database.  \n",
     "- **Selection:** Uses an `if` condition to check if the quote exists before updating.  \n",
     "- **Sequencing:** Executes steps in order: retrieving the quote, modifying its attributes, committing changes to the database, and returning a success message.  \n",
+    "- **Problems:** Next time I should find a procedure with iteration. I couldn't find any procedure in my API code that had Sequencing, Selection, and Iteration but I will try to find \n",
+    "\n",
     "\n",
     "### Segment 2: Calling the Procedure  \n",
     "- **Function:** `editQuote(id, currentAuthor, currentQuote, currentDate)`  \n",
