update requirements.txt and ml titanic

--- a/_notebooks/bigidea2/2025-02-19-pandas-ml_titanic.ipynb
+++ b/_notebooks/bigidea2/2025-02-19-pandas-ml_titanic.ipynb
@@ -74,13 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment the following lines to install the required packages\n",
     "# !pip install seaborn\n",
     "# !pip install pandas\n",
+    "# !pip install numpy\n",
     "# !pip install scikit-learn"
    ]
   },
@@ -95,16 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -362,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -815,14 +809,14 @@
     "\n",
     "- [Decision Trees](https://scikit-learn.org/stable/modules/tree.html#tree) are a type of model used for both classification and regression. They work by creating a tree-like model of decisions based on the features. For example, in the context of the Titanic dataset, a Decision Tree might make decisions based on features like 'age', 'sex', and 'fare' to predict whether a passenger survived. The tree might first split by 'sex', then for each sex, split by 'age', and so on, creating a tree of decisions.\n",
     "\n",
-    "- [Logistic Regression](https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression) is a statistical model used in machine learning for binary classification problems. It models the probabilities of the default class (e.g., the probability of a passenger surviving, in the context of the Titanic dataset). \n",
+    "- [Logistic Regression](https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression) A statistical model used in machine learning for binary classification problems. It estimates the probability that a given input belongs to a specific class (e.g., whether a passenger survived in the Titanic dataset). Logistic Regression applies a weighted sum of input features (which are often scaled between 0 and 1 for better performance) and passes the result through a sigmoid function to produce a probability between 0 and 1. The model then uses a threshold (typically 0.5) to classify the input into one of two categories. The sigmoid function is used to convert the weighted sum of input features into a probability score.\n",
     "\n",
     "- After training our models, we'll evaluate their performance using accuracy, the percentage of correct predictions on unseen data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +831,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/johnmortensen/nighthawk/portfolio_2025/venv/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "/home/martijorbam/nighthawk/marti_2025/venv/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -907,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -945,12 +939,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>John Mortensen</td>\n",
+       "      <td>Marti</td>\n",
        "      <td>2</td>\n",
        "      <td>male</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>S</td>\n",
        "      <td>False</td>\n",
@@ -960,8 +954,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             name  pclass   sex  age  sibsp  parch  fare embarked  alone\n",
-       "0  John Mortensen       2  male   65      1      1  16.0        S  False"
+       "    name  pclass   sex  age  sibsp  parch  fare embarked  alone\n",
+       "0  Marti       2  male   16      4      0  16.0        S  False"
       ]
      },
      "metadata": {},
@@ -1005,9 +999,9 @@
        "      <th>0</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -1020,7 +1014,7 @@
       ],
       "text/plain": [
        "   pclass  sex  age  sibsp  parch  fare  alone  embarked_C  embarked_Q  \\\n",
-       "0       2    1   65      1      1  16.0      0         0.0         0.0   \n",
+       "0       2    1   16      4      0  16.0      0         0.0         0.0   \n",
        "\n",
        "   embarked_S  \n",
        "0         1.0  "
@@ -1033,8 +1027,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Death probability: 90.89%\n",
-      "Survival probability: 9.11%\n"
+      "Death probability: 82.62%\n",
+      "Survival probability: 17.38%\n"
      ]
     }
    ],
@@ -1045,15 +1039,15 @@
     "\n",
     "# Define a new passenger\n",
     "passenger = pd.DataFrame({\n",
-    "    'name': ['John Mortensen'],\n",
-    "    'pclass': [2], # 2nd class picked as it was median, bargains are my preference, but I don't want to have poor accomodations\n",
+    "    'name': ['Marti'],\n",
+    "    'pclass': [2], \n",
     "    'sex': ['male'],\n",
-    "    'age': [65],\n",
-    "    'sibsp': [1], # I usually travel with my wife\n",
-    "    'parch': [1], # currenly I have 1 child at home\n",
-    "    'fare': [16.00], # median fare picked assuming it is 2nd class\n",
-    "    'embarked': ['S'], # majority of passengers embarked in Southampton\n",
-    "    'alone': [False] # travelling with family (spouse and child))\n",
+    "    'age': [16],\n",
+    "    'sibsp': [4], \n",
+    "    'parch': [0], \n",
+    "    'fare': [16.00],\n",
+    "    'embarked': ['S'], \n",
+    "    'alone': [False] \n",
     "})\n",
     "\n",
     "display(passenger)\n",
@@ -1090,23 +1084,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The importance of pclass is: 0.15079115953493002\n",
+      "The importance of pclass is: 0.1506447180360646\n",
       "The importance of sex is: 0.27345943069742495\n",
-      "The importance of age is: 0.23920011105434624\n",
-      "The importance of sibsp is: 0.05411073601351371\n",
+      "The importance of age is: 0.25577274555722573\n",
+      "The importance of sibsp is: 0.03918773820960523\n",
       "The importance of parch is: 0.013914855333419261\n",
-      "The importance of fare is: 0.23936320058241756\n",
-      "The importance of alone is: 0.004181924322029404\n",
-      "The importance of embarked_C is: 0.01202303242583453\n",
+      "The importance of fare is: 0.24029946123682913\n",
+      "The importance of alone is: 0.007841108103805127\n",
+      "The importance of embarked_C is: 0.009409329724566155\n",
       "The importance of embarked_Q is: 0.0\n",
-      "The importance of embarked_S is: 0.012955550036084264\n"
+      "The importance of embarked_S is: 0.009470613101059766\n"
      ]
     }
    ],
@@ -1132,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1139,13 @@
       "    \n",
       " Step 1:  Define theoritical passenger data for prediction: \n",
       "\t {'name': ['John Mortensen'], 'pclass': [2], 'sex': ['male'], 'age': [65], 'sibsp': [1], 'parch': [1], 'fare': [16.0], 'embarked': ['S'], 'alone': [False]}\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " Step 2:  Gets, and conditionaly cleans and builds, the singleton instance of the TitanicModel.\n",
       "        The model is used for analysis on titanic data and predictions on the survival of theoritical passengers.\n",
       "        \n",
@@ -1168,8 +1168,8 @@
       "        Returns:\n",
       "           dictionary : contains die and survive probabilities \n",
       "        \n",
-      "\t death probability: 93.46%\n",
-      "\t survival probability: 6.54%\n",
+      "\t death probability: 93.49%\n",
+      "\t survival probability: 6.51%\n",
       "\n",
       " Step 4: Get the feature weights\n",
       "        The weights represent the relative importance of each feature in the prediction model.\n",
@@ -1177,16 +1177,16 @@
       "        Returns:\n",
       "            dictionary: contains each feature as a key and its weight of importance as a value\n",
       "        \n",
-      "\t\t pclass 11.87%\n",
+      "\t\t pclass 12.26%\n",
       "\t\t sex 29.65%\n",
-      "\t\t age 24.34%\n",
-      "\t\t sibsp 5.96%\n",
-      "\t\t parch 2.03%\n",
-      "\t\t fare 22.13%\n",
-      "\t\t alone 0.68%\n",
-      "\t\t embarked_C 0.43%\n",
-      "\t\t embarked_Q 0.79%\n",
-      "\t\t embarked_S 2.13%\n"
+      "\t\t age 23.03%\n",
+      "\t\t sibsp 5.56%\n",
+      "\t\t parch 1.94%\n",
+      "\t\t fare 22.62%\n",
+      "\t\t alone 0.88%\n",
+      "\t\t embarked_C 1.27%\n",
+      "\t\t embarked_Q 1.19%\n",
+      "\t\t embarked_S 1.60%\n"
      ]
     }
    ],
@@ -1385,21 +1385,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'flask'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## Python Titanic Sample API endpoint\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mflask\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Blueprint, request, jsonify\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mflask_restful\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Api, Resource \u001b[38;5;66;03m# used for REST API building\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Import the TitanicModel class from the model file\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# from model.titanic import TitanicModel\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'flask'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Python Titanic Sample API endpoint\n",
     "from flask import Blueprint, request, jsonify\n",
@@ -1477,7 +1465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
