--- a/_notebooks/bigidea2/2025-02-19-pandas-ml_titanic.ipynb
+++ b/_notebooks/bigidea2/2025-02-19-pandas-ml_titanic.ipynb
@@ -74,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /home/martijorbam/nighthawk/marti_2025/venv/lib/python3.12/site-packages (2.2.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Uncomment the following lines to install the required packages\n",
     "# !pip install seaborn\n",
