try to fix layout

--- a/_notebooks/lessons/2024-03-20-5.1_beneficial_and_harmful_effects.ipynb
+++ b/_notebooks/lessons/2024-03-20-5.1_beneficial_and_harmful_effects.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "layout: blog\n",
+    "layout: post\n",
     "toc: true\n",
     "categories: [Big Idea5]\n",
     "title: 5.1 Beneficial and Harmful Effects\n",
