--- a/_notebooks/lessons/2025-03-25-5.4_crowdsourcing.ipynb
+++ b/_notebooks/lessons/2025-03-25-5.4_crowdsourcing.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
     "toc: true\n",
     "categories: [Big Idea5]\n",
-    "title: 5.3 Computing Bias\n",
-    "description: Big Idea 5.3\n",
+    "title: 5.4 Crowdsourcing\n",
+    "description: Big Idea 5.4\n",
     "type: ccc\n",
     "comments: true\n",
     "---"
