finish popcorn hack

--- a/_notebooks/lessons/2025-03-25-5.4_crowdsourcing.ipynb
+++ b/_notebooks/lessons/2025-03-25-5.4_crowdsourcing.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "## Popcorn Hack 3\n",
     "**Question:** How does distributed computing enable crowdsourcing?  \n",
-    "**Answer:**\n",
+    "**Answer:** Distributed computing enhances crowdsourcing by enabling large-scale data processing via multiple devices.\n",
     "1. **SETI@home** - Uses idle home computers for research\n",
     "2. **Folding@home** - Crowdsourced disease research\n",
     "3. **Bitcoin** - Distributed transaction verification\n",
