--- a/_notebooks/lessons/2025-03-31-5.5_legalandethicalconcerns.ipynb
+++ b/_notebooks/lessons/2025-03-31-5.5_legalandethicalconcerns.ipynb
@@ -70,24 +70,27 @@
     "#### Disadvantages:\n",
     "- Open-source projects can be misused for harmful purposes.\n",
     "\n",
-    "### Open-Source Licenses\n",
-    "| License         | Permissions                                       | Restrictions                                    | Common Uses                 |\n",
-    "|---------------|------------------------------------------------|--------------------------------|------------------------------|\n",
-    "| MIT          | Free to use, modify, distribute with credit | No liability/warranty         | Web apps, libraries, frameworks |\n",
-    "| Apache 2.0   | Similar to MIT, includes patent protection | Must include license notice    | Large-scale projects, APIs    |\n",
-    "| GPL          | Free to use, modifications must be open-source | No private versions            | Software meant to stay open-source |\n",
-    "| BSD 3-Clause | Modify and share freely, even in closed-source projects | No warranty                    | Academic projects, software  |\n",
-    "| Creative Commons | Defines reuse permissions (rare for code) | Not for software, mostly docs/images | Documentation, art, books |\n",
+    "### Open-Source Licenses  \n",
     "\n",
-    "### Legal Violations\n",
+    "| License         | Permissions                                        | Restrictions                               | Common Uses                       |\n",
+    "|---------------|-------------------------------------------------|--------------------------------|--------------------------------|\n",
+    "| **MIT**          | Free to use, modify, distribute with credit    | No liability/warranty         | Web apps, libraries, frameworks |\n",
+    "| **Apache 2.0**   | Similar to MIT, includes patent protection     | Must include license notice   | Large-scale projects, APIs      |\n",
+    "| **GPL**          | Free to use, modifications must be open-source | No private versions           | Software meant to stay open-source |\n",
+    "| **BSD 3-Clause** | Modify and share freely, even in closed-source projects | No warranty                    | Academic projects, software     |\n",
+    "| **Creative Commons** | Defines reuse permissions (rare for code) | Not for software, mostly docs/images | Documentation, art, books |\n",
+    "\n",
+    "### Legal Violations  \n",
+    "\n",
     "| Action | Reasoning | License Violated |\n",
-    "|--------|----------|-----------------|\n",
-    "| Using code without a license | Default is \"All Rights Reserved\" | Any repo without a license |\n",
-    "| Modifying & distributing GPL code without releasing changes | GPL requires derivative works to be open-source | GPL |\n",
-    "| Removing a required license notice | Some licenses require keeping copyright notice | MIT, Apache, GPL |\n",
-    "| Selling open-source software without permission | Must follow license terms | GPL, Apache 2.0, CC |\n",
-    "| Using code with a Non-Commercial (NC) license for profit | Some licenses prohibit commercial use | Creative Commons NC |\n",
-    "| Copying proprietary software without payment | Paid licenses required | All proprietary software |\n",
+    "|--------|-----------|-----------------|\n",
+    "| **Using code without a license** | Default is \"All Rights Reserved\" | Any repo without a license |\n",
+    "| **Modifying & distributing GPL code without releasing changes** | GPL requires derivative works to be open-source | GPL |\n",
+    "| **Removing a required license notice** | Some licenses require keeping copyright notice | MIT, Apache, GPL |\n",
+    "| **Selling open-source software without permission** | Must follow license terms | GPL, Apache 2.0, CC |\n",
+    "| **Using code with a Non-Commercial (NC) license for profit** | Some licenses prohibit commercial use | Creative Commons NC |\n",
+    "| **Copying proprietary software without payment** | Paid licenses required | All proprietary software |\n",
+    "\n",
     "\n",
     "### Ethical Concerns\n",
     "- **Respect for IP:** Unauthorized code usage disrespects creators' rights.\n",
