--- a/_notebooks/lessons/2025-03-31-5.5_legalandethicalconcerns.ipynb
+++ b/_notebooks/lessons/2025-03-31-5.5_legalandethicalconcerns.ipynb
@@ -114,6 +114,9 @@
     "\n",
     "### Popcorn Hacks 2\n",
     "**Scenario:** You're building an open-source lyric-guessing app. You want it to spread fast, but also prevent big corporations from stealing your work. Which license do you pick?\n",
+    "\n",
+    "I think they could all work as:\n",
+    "\n",
     "- **MIT:** Easiest to access but allows corporations to take without restrictions.\n",
     "- **GPL:** Forces modifications to remain open-source, preventing corporate misuse.\n",
     "- **Apache 2.0:** Adds patent protections, making legal disputes easier to manage.\n",
