modified:   _notebooks/lessons/2025-04-08-3.2_lists_filteringalgorithms.ipynb

--- a/_notebooks/lessons/2025-04-08-3.2_lists_filteringalgorithms.ipynb
+++ b/_notebooks/lessons/2025-04-08-3.2_lists_filteringalgorithms.ipynb
@@ -55,15 +55,19 @@
     "```python\n",
     "for food in foods:\n",
     "    print(\"Yum!\", food)\n",
-    "```\n",
-    "\n",
-    "# Final Reflection\n",
-    "Filtering algorithms and lists are used in real life to organize and extract meaningful data, such as filtering search results on Google or products on Amazon. They work by looping through a list, applying a condition, and creating a new list with only the matching items."
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3) Filtering Algorithm (Use pandas - database filtering)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +82,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "# ✅ Step 1: Start with a list of data (our \"database\")\n",
