--- a/_notebooks/lessons/2025-04-08-3.2_lists_filteringalgorithms.ipynb
+++ b/_notebooks/lessons/2025-04-08-3.2_lists_filteringalgorithms.ipynb
@@ -101,6 +101,14 @@
     "# ✅ Step 4: Output the filtered DataFrame\n",
     "print(high_scores)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Reflection\n",
+    "Filtering algorithms and lists are used in real life to organize and extract meaningful data, such as filtering search results on Google or products on Amazon. They work by looping through a list, applying a condition, and creating a new list with only the matching items."
+   ]
   }
  ],
  "metadata": {
