add missing hack

--- a/_notebooks/lessons/2025-04-21-3.4_BigO_AlgorithmEfficiency.ipynb
+++ b/_notebooks/lessons/2025-04-21-3.4_BigO_AlgorithmEfficiency.ipynb
@@ -85,6 +85,8 @@
     "## Homework Hack #1: Sorting Showdown\n",
     "\n",
     "**Python Code:**\n",
+    "\n",
+    "\n",
     "```python\n",
     "import random, time\n",
     "\n",
@@ -130,7 +132,55 @@
     "b = lst.copy()\n",
     "start = time.time()\n",
     "merge_sort(b)\n",
-    "print(\"Merge Sort Time:\", time.time() - start)\n"
+    "print(\"Merge Sort Time:\", time.time() - start)\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Conclusion:\n",
+    "\n",
+    "Merge Sort is consistently faster than Bubble Sort.\n",
+    "\n",
+    "Bubble Sort does unnecessary comparisons even in nearly sorted arrays.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Homework Hack #2:\n",
+    "\n",
+    "```python\n",
+    "def linear_search(arr, target):\n",
+    "    count = 0\n",
+    "    for i in range(len(arr)):\n",
+    "        count += 1\n",
+    "        if arr[i] == target:\n",
+    "            return count\n",
+    "    return -1\n",
+    "\n",
+    "def binary_search(arr, target):\n",
+    "    left, right = 0, len(arr) - 1\n",
+    "    count = 0\n",
+    "    while left <= right:\n",
+    "        count += 1\n",
+    "        mid = (left + right) // 2\n",
+    "        if arr[mid] == target:\n",
+    "            return count\n",
+    "        elif arr[mid] < target:\n",
+    "            left = mid + 1\n",
+    "        else:\n",
+    "            right = mid - 1\n",
+    "    return -1\n",
+    "\n",
+    "arr = list(range(1, 100001))\n",
+    "target = random.choice(arr)\n",
+    "\n",
+    "print(\"Linear Search Comparisons:\", linear_search(arr, target))\n",
+    "print(\"Binary Search Comparisons:\", binary_search(arr, target))\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Conclusion:\n",
+    "\n",
+    "Binary Search is much faster due to halving the search space.\n",
+    "Binary Search fails on unsorted lists — sorting is a prerequisite.\n"
    ]
   }
  ],
