run code and organize blog

--- a/_notebooks/lessons/2025-04-21-3.4_BigO_AlgorithmEfficiency.ipynb
+++ b/_notebooks/lessons/2025-04-21-3.4_BigO_AlgorithmEfficiency.ipynb
@@ -82,12 +82,25 @@
     "\n",
     "---\n",
     "\n",
-    "## Homework Hack #1: Sorting Showdown\n",
-    "\n",
-    "**Python Code:**\n",
-    "\n",
-    "\n",
-    "```python\n",
+    "## Homework Hack #1: Sorting Showdown\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b147654c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bubble Sort Time: 0.0008630752563476562\n",
+      "Merge Sort Time: 0.0005192756652832031\n"
+     ]
+    }
+   ],
+   "source": [
     "import random, time\n",
     "\n",
     "def bubble_sort(arr):\n",
@@ -132,21 +145,35 @@
     "b = lst.copy()\n",
     "start = time.time()\n",
     "merge_sort(b)\n",
-    "print(\"Merge Sort Time:\", time.time() - start)\n",
-    "```\n",
-    "\n",
-    "\n",
+    "print(\"Merge Sort Time:\", time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "602b2fa0",
+   "metadata": {},
+   "source": [
     "Conclusion:\n",
     "\n",
-    "Merge Sort is consistently faster than Bubble Sort.\n",
+    "Merge Sort is consistently faster than Bubble Sort. Bubble Sort does unnecessary comparisons even in nearly sorted arrays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dad02556",
+   "metadata": {},
+   "source": [
     "\n",
-    "Bubble Sort does unnecessary comparisons even in nearly sorted arrays.\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Homework Hack #2:\n",
-    "\n",
-    "```python\n",
+    "## Homework Hack #2:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b08ff70d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def linear_search(arr, target):\n",
     "    count = 0\n",
     "    for i in range(len(arr)):\n",
@@ -173,20 +200,38 @@
     "target = random.choice(arr)\n",
     "\n",
     "print(\"Linear Search Comparisons:\", linear_search(arr, target))\n",
-    "print(\"Binary Search Comparisons:\", binary_search(arr, target))\n",
-    "```\n",
-    "\n",
+    "print(\"Binary Search Comparisons:\", binary_search(arr, target))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfc7c00f",
+   "metadata": {},
+   "source": [
     "\n",
     "Conclusion:\n",
     "\n",
-    "Binary Search is much faster due to halving the search space.\n",
-    "Binary Search fails on unsorted lists — sorting is a prerequisite.\n"
+    "Binary Search is much faster due to halving the search space. Binary Search fails on unsorted lists — sorting is a prerequisite."
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
