--- a/_notebooks/lessons/2025-04-21-3.4_BigO_AlgorithmEfficiency.ipynb
+++ b/_notebooks/lessons/2025-04-21-3.4_BigO_AlgorithmEfficiency.ipynb
@@ -169,10 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b08ff70d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Search Comparisons: 26137\n",
+      "Binary Search Comparisons: 15\n"
+     ]
+    }
+   ],
    "source": [
     "def linear_search(arr, target):\n",
     "    count = 0\n",
